--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -151,11 +151,10 @@ body[data-theme="dark"] {
     .text-gray-700 {
         @apply text-white;
     }
-
-    .lg\:shadow-lg{
-        box-shadow :0 20px 25px -5px rgba(255, 255, 255, 0.1), 0 10px 10px -5px rgba(255, 255, 255, 0.04)
+    .lg\:shadow-lg {
+        box-shadow: 0 20px 25px -5px rgba(255, 255, 255, 0.1), 0 10px 10px -5px rgba(255, 255, 255, 0.04)
     }
-    .learn-button{
+    .learn-button {
         background-color: #c4c4c4;
         @apply text-gray-900;
         &:hover {
@@ -166,7 +165,8 @@ body[data-theme="dark"] {
     input[type="text"] {
         background-color: #191b1f;
     }
-    .bg-white {
+    .bg-white,
+    .bg-gray-100 {
         background-color: #191b1f;
     }
     .post-card-excerpt {
