--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -51,6 +51,14 @@ ul {
     }
 }
 
+.footerlink {
+    margin-left: 0rem !important;
+}
+
+.brandpanel {
+    background-color: #1072ba;
+}
+
 .animated-link:after {
     content: "";
     width: 0px;
