--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,14 +1,6 @@
-@font-face {
-  font-family: "Orbitron Black";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Orbitron Black"), local("Orbitron-Black"),
-    url("http://allfont.ru/cache/fonts/orbitron-black_81a7f9b2eb5fbde8340b16c6f7cdebdb.woff")
-      format("woff"),
-    url("http://allfont.ru/cache/fonts/orbitron-black_81a7f9b2eb5fbde8340b16c6f7cdebdb.ttf")
-      format("truetype");
-}
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
 blockquote {
   @apply border-l;
   @apply border-l-4;
@@ -21,9 +13,14 @@ blockquote {
   }
 }
 
-* {
-  font-family: "Orbitron Black", arial;
+body {
+  font-family: "Lato", sans-serif;
 }
+
+h1, h2 {
+  font-family: 'Orbitron', sans-serif !important;
+}
+
 .container-fluid {
   width: 100%;
   margin-right: auto;
